2007-04-12  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-minor-mode-map): Make go button same same
	length as stop button to lessen flicker.
	(jdb): Add gud-print.
	(gud-find-expr): Jdb prints the expression with the value, so
	don't insert it in the output.

2007-04-11  Jason Rumney  <jasonr@gnu.org>

	* dnd.el (dnd-get-local-file-name): Decode both upper and lower
	case hex. Do not try to decode non-hex letters.

2007-04-11  Markus Triska  <markus.triska@gmx.at>

        * emacs-lisp/byte-opt.el (byte-optimize-backward-char)
        (byte-optimize-backward-word): Remove (move to bytecomp.el)
	(byte-optimize-form-code-walker): Evaluate pure function calls if
	possible.
	(byte-optimize-all-constp): New function.

        * emacs-lisp/bytecomp.el (byte-compile-char-before): Improve
        numeric argument case.
        (byte-compile-backward-char, byte-compile-backward-word): New
        functions, performing rewriting previously done in byte-opt.el.
        Fix their "Fixme" item (restriction to numeric arguments).

2007-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* desktop.el (desktop-save, desktop-create-buffer): Replace mapcar with
	dolist.
	(after-init-hook): Don't quote lambda.
	(desktop-first-buffer): Don't wrap it in eval-when-compile.
	(desktop-internal-v2s): Remove unused var `el'.
	(desktop-buffer-major-mode, desktop-buffer-locals): Move out of
	desktop-restore-file-buffer.
	(desktop-buffer-ok-count, desktop-buffer-fail-count): Move out of
	desktop-create-buffer.

2007-04-10  Chong Yidong  <cyd@stupidchicken.com>

	* woman.el (woman-decode-buffer): Postphone macro-set check...
	(woman-decode-region): ...to here.

2007-04-10  Thien-Thi Nguyen  <ttn@gnu.org>

	* startup.el (tty-handle-args): Use %S to log ARGS.

2007-04-10  Glenn Morris  <rgm@gnu.org>

	* dframe.el (dframe-frame-mode): Do not set auto-show-mode, since
	it is obsolete and has no effect.

	* dos-w32.el (default-buffer-file-type): Add defvar to quieten
	byte-compiler.